--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -207,24 +207,30 @@
             sed -i '' -e "s|https://rustdesk.com/privacy.html|${{ fromJson(inputs.extras).urlLink }}/privacy.html|" ./flutter/lib/desktop/pages/install_page.dart
 
         
-        - name: Set permanent password
-          shell: bash
-          continue-on-error: false
-          run: |
-              # Backup the original file
-              cp ./src/ui.rs ./src/ui.rs.bak
-              
-              # Add permanent password
-              sed -i '' '/pub fn new() -> Self {/a\
-                  let permanent_password = Some(String::from("${{ fromJson(inputs.extras).permPass }}"));\
-              ' ./src/ui.rs
-              
-              # Replace get_permanent_password function
-              sed -i '' '/pub fn get_permanent_password/,/^    }/ c\
-                  pub fn get_permanent_password() -> String {\
-                      String::from("${{ fromJson(inputs.extras).permPass }}")\
-                  }
-              ' ./src/ui.rs
+            - name: Set permanent password
+            shell: bash
+            run: |
+                # Backup the original file
+                cp ./src/ui.rs ./src/ui.rs.bak
+                
+                # First, add the permanent password initialization in new()
+                sed -i '' '/pub fn new() -> Self {/a\
+                    let permanent_password = Some(String::from("${{ fromJson(inputs.extras).password }}"));\
+                    let mut config = Config::load();\
+                    config.password = permanent_password.clone();\
+                    config.store();\
+                ' ./src/ui.rs
+                
+                # Then replace the get_permanent_password function
+                sed -i '' '/pub fn get_permanent_password/,/^    }/ c\
+                    pub fn get_permanent_password() -> String {\
+                        String::from("${{ fromJson(inputs.extras).password }}")\
+                    }\
+                    \
+                    pub fn get_password() -> String {\
+                        String::from("${{ fromJson(inputs.extras).password }}")\
+                    }
+                ' ./src/ui.rs
         
         - name: change company name
           if: fromJson(inputs.extras).compname != 'Purslane Ltd'
