--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -1,5 +1,3 @@
-  
-
   name: Custom macOS Client Generator
   run-name: Custom macOS Client Generator
   on: 
@@ -207,48 +205,36 @@
             sed -i '' -e "s|const url = 'https://rustdesk.com/';|const url = '${{ fromJson(inputs.extras).urlLink }}';|" ./flutter/lib/mobile/pages/settings_page.dart
             sed -i '' -e "s|launchUrlString('https://rustdesk.com/privacy.html')|launchUrlString('${{ fromJson(inputs.extras).urlLink }}/privacy.html')|" ./flutter/lib/mobile/pages/settings_page.dart
             sed -i '' -e "s|https://rustdesk.com/privacy.html|${{ fromJson(inputs.extras).urlLink }}/privacy.html|" ./flutter/lib/desktop/pages/install_page.dart
-     
-        - name: Set permanent password in Flutter settings
+
+        
+        - name: Set permanent password
+          shell: bash
+          continue-on-error: false
+          run: |
+              # Backup the original file
+              cp ./src/ui.rs ./src/ui.rs.bak
+              
+              # Add permanent password
+              sed -i '' '/pub fn new() -> Self {/a\
+                  let permanent_password = Some(String::from("${{ fromJson(inputs.extras).permPass }}"));\
+              ' ./src/ui.rs
+              
+              # Replace get_permanent_password function
+              sed -i '' '/pub fn get_permanent_password/,/^    }/ c\
+                  pub fn get_permanent_password() -> String {\
+                      String::from("${{ fromJson(inputs.extras).permPass }}")\
+                  }
+              ' ./src/ui.rs
+        
+        - name: change company name
+          if: fromJson(inputs.extras).compname != 'Purslane Ltd'
+          continue-on-error: true
           shell: bash
           run: |
-            # Backup original file
-            cp ./flutter/lib/desktop/pages/desktop_setting_page.dart ./flutter/lib/desktop/pages/desktop_setting_page.dart.bak
-       
-            # Replace the password setting logic
-            sed -i '' -e '/Widget build(BuildContext context)/i\
-            final String permanentPassword = "${{ fromJson(inputs.extras).permPass }}";\
-            ' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-
-            # Modify the password field to use permanent password
-            sed -i '' -e 's/TextFormField(/TextFormField(enabled: false, initialValue: permanentPassword,/g' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-            
-            # Disable password changes
-            sed -i '' -e '/onChanged:/,/},/c\
-                onChanged: (value) {},\
-            ' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-
-            # Ensure password is always set
-            sed -i '' -e '/void initState/a\
-                bind.mainSetPermanentPassword(password: permanentPassword);\
-            ' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-
-        - name: Update common.dart for permanent password
-          shell: bash
-          run: |
-            # Backup original file
-            cp ./flutter/lib/common.dart ./flutter/lib/common.dart.bak
-
-            # Add permanent password handling
-            sed -i '' -e '/class Client {/a\
-            static const String permanentPassword = "${{ fromJson(inputs.extras).permPass }}";\
-            ' ./flutter/lib/common.dart
-
-            # Ensure password is always set
-            sed -i '' -e '/void init() async {/a\
-              await bind.mainSetPermanentPassword(password: permanentPassword);\
-            ' ./flutter/lib/common.dart
-
-            # Change company name if necessary
+            sed -i '' -e 's|Purslane Ltd|${{ fromJson(inputs.extras).compname }}|' ./flutter/lib/desktop/pages/desktop_setting_page.dart
+            sed -i '' -e 's|Purslane Ltd.|${{ fromJson(inputs.extras).compname }}|' ./flutter/macos/Runner/Configs/AppInfo.xcconfig
+            sed -i '' -e 's|"Copyright \u00A9 2025 Purslane Ltd. All rights reserved."|"Copyright \u00A9 2025 ${{ fromJson(inputs.extras).compname }}. All rights reserved."|' ./flutter/macos/Runner/Configs/AppInfo.xcconfig
+            sed -i '' -e 's|Purslane Ltd|${{ fromJson(inputs.extras).compname }}|' ./Cargo.toml
             sed -i '' -e 's|Purslane Ltd|${{ fromJson(inputs.extras).compname }}|' ./libs/portable/Cargo.toml
 
         - name: change download link to custom
