--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -30,6 +30,14 @@ jobs:
             }
     steps:
       - name: Checkout source code
+        if: ${{ inputs.version != 'master' }}
+        uses: actions/checkout@v4
+        with:
+          repository: rustdesk/rustdesk
+          ref: refs/tags/${{ inputs.version }}
+          submodules: recursive
+        
+      - name: Checkout source code
         if: ${{ inputs.version == 'master' }}
         uses: actions/checkout@v4
         with:
